--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   wolt_responsive_layout_grid: ^0.0.3
   flutter_code_editor: ^0.3.3
   dropdown_button2: ^2.3.9
+  dio: ^5.8.0+1
+  flutter_expanded_tile: ^0.4.0
 
 dev_dependencies:
   flutter_test:
